Fix issues with 1.16.5 version
a